refactor: place, category, Restaurant Collect Batch